# mortadelo

./: .gitignore  AUTHORS  ChangeLog  GLib.IO.cs  HACKING  Makefile  Makefile.am  NEWS  README  aggregator.cs  autogen.sh  compact-log.cs  configure.ac  errno.cs  filter-formatter.cs  filter.cs  filtered-log.cs  line-reader.cs  log-io.cs  log-modification-accumulator.cs  log-provider.cs  log.cs  main-window.cs  main.cs  memory-profile.cs  mortadelo.doap  mortadelo.in  parser.cs  plain-formatter.cs  regex-cache.cs  regex-filter.cs  runner.cs  serializer.cs  spawn.cs  string-pool.cs  substring-filter.cs  syscall-formatter.cs  syscall-list-model.cs  syscall-tree-view.cs  syscall.cs  (+7 more)
doc/: Makefile.am  architecture.txt  notes.txt  systemtap-supported-syscalls.txt
po/: .gitignore  ChangeLog  LINGUAS  POTFILES.in  ca.po  ca@valencia.po  cs.po  da.po  de.po  es.po  fr.po  gl.po  pt_BR.po  ro.po  sl.po  sv.po  zh_CN.po
